# msg-store-server

./: .gitignore  Cargo.toml  README.md  store.config.json
"/home/joshua/.msg-store/leveldb"/msg_data/: 000005.ldb  LOG  LOG.old  MANIFEST-000004
"/home/joshua/.msg-store/leveldb"/msgs/: 000005.ldb  LOG  LOG.old  MANIFEST-000004
"/home/joshua/msg-store/leveldb"/msg_data/: LOG
"/home/joshua/msg-store/leveldb"/msgs/: LOG
api-testing/: package-lock.json  package.json
api-testing/tests/: index.spec.js
postman/collections/: msg-store-collection_f7d7660c-7231-4e61-994f-e404e6252b70.json  msg-store_bcb9d1df-3438-4048-b1fa-a41b63f06e29.json  msg-store_fe58f187-0172-4eb6-857c-04d9e1cda74f.json
postman/schemas/: schema.yaml
src/: args.rs  config.rs  error.rs  init.rs  lib.rs  main.rs  msg.rs
src/api/: mod.rs
src/api/export/: mod.rs
src/api/group/: delete.rs  get.rs  mod.rs
src/api/group_defaults/: delete.rs  get.rs  post.rs
src/api/lower/: export.rs  file_storage.rs  mod.rs
src/api/lower/group/: get.rs  mod.rs  rm.rs
src/api/lower/group_defaults/: get.rs  mod.rs  rm.rs  set.rs
src/api/lower/msg/: add.rs  get.rs  mod.rs  rm.rs
src/api/lower/stats/: get.rs  mod.rs  rm.rs  set.rs
src/api/lower/store/: get.rs  set.rs
src/api/msg/: delete.rs  get.rs  mod.rs  post.rs  put.rs
src/api/stats/: delete.rs  get.rs  mod.rs  put.rs
src/api/store/: get.rs  put.rs
src/api/ws/: mod.rs
src/database/: mod.rs
