[package]
name = "msg-store-server"
version = "0.1.0"
authors = ["joshua enokson <kilograhm@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-multipart = "0.3.0"
actix-web = "3"
actix-web-actors = "3"
bytes = "1.1.0"
clap = "2.33.3"
dirs = "1.0.4"
env_logger = "0.9.0"
futures = "0.3.19"
log = "0.4.14"
msg-store = { git = "https://github.com/msg-store/msg-store", rev = "5c3d90e0798f286ce212c5d8d7165eb0c971fa6a" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"